<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Layout_ktp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">


        <ImageView
        android:id="@+id/img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_margin="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:padding="1dp"
        android:src="@drawable/bung_karno" />

        <ImageView
            android:id="@+id/imga"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="7dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:padding="1dp"
            android:src="@drawable/bung_karno" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp">



        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginTop="5dp"
            android:text="@string/ktp1"
            android:textSize="20dp"

            />


        <TextView
            android:id="@+id/txt2"
            android:layout_width="216dp"
            android:layout_height="37dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp"
            android:text="@string/ktpa"
            android:textSize="20dp"
            android:textStyle="bold"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp">



        <TextView
            android:id="@+id/txt3"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginTop="5dp"
            android:text="@string/ktp2"
            android:textSize="20dp"

            />


        <TextView
            android:id="@+id/txt4"
            android:layout_width="216dp"
            android:layout_height="37dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp"
            android:text="@string/ktpb"
            android:textSize="20dp"
            android:textStyle="bold"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp">


        <TextView
            android:id="@+id/txt5"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginTop="5dp"
            android:text="@string/ktp3"
            android:textSize="20dp"

            />


        <TextView
            android:id="@+id/txt6"
            android:layout_width="216dp"
            android:layout_height="37dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp"
            android:text="@string/ktpc"
            android:textSize="20dp"
            android:textStyle="bold"/>


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/img1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:padding="1dp"
            android:src="@drawable/bung_karno" />

        <ImageView
            android:id="@+id/img2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="7dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="50dp"
            android:padding="1dp"
            android:src="@drawable/bung_karno" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp">


        <TextView
            android:id="@+id/txt7"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginTop="5dp"
            android:text="> Wajah dan ktp harus"
            android:textSize="20dp"

            />


        <TextView
            android:id="@+id/txt8"
            android:layout_width="216dp"
            android:layout_height="37dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp"
            android:text="terfoto sepenuhnya"
            android:textSize="20dp"
            android:textStyle="bold"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp">


        <TextView
            android:id="@+id/txt9"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginTop="5dp"
            android:text="> Wajah dan ktp tampak jelas"
            android:textSize="20dp"

            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp">


        <TextView
            android:id="@+id/txt10"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:text="(tidak buram)"
            android:textSize="20dp"
            android:textStyle="bold"

            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/txt11"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginTop="5dp"
            android:text="> Letakan ktp"
            android:textSize="20dp"

            />


        <TextView
            android:id="@+id/txt12"
            android:layout_width="237dp"
            android:layout_height="37dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp"
            android:text="dibawah atau disamping "
            android:textSize="20dp"
            android:textStyle="bold" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp">


        <TextView
            android:id="@+id/txt13"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:text="Saat mengambil foto"
            android:textSize="20dp"
            android:textStyle="bold"

            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:background="@color/colorPrimary"
            android:text="Ambil Ktp"
            android:textAllCaps="false" />


        <Button
            android:id="@+id/btn_keluar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:background="@color/colorPrimaryDark"
            android:text="Selfie Ktp"
            android:textAllCaps="false" />

    </LinearLayout>




</LinearLayout>